actual-manifests/cms-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-backend-service
  namespace: croms
spec:
  type: NodePort
  selector:
    app: cms-backend-app    # backend deployment의 container name
  ports:
    - name: http
      protocol: TCP
      port: 5545            # 서비스가 노출할 포트
      targetPort: 5545      # backend pod에서 실제 listen하는 포트
      nodePort: 32166

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-backend-app
  namespace: croms
spec:
  selector:
    matchLabels:
      app: cms-backend-app
  replicas: 1
  template:
    metadata:
      labels: 
        app: cms-backend-app
    spec: 
      containers: 
        - name: cms-backend-app
          image: registry.local/cms-backend-app:v1.0.6
          imagePullPolicy: IfNotPresent
          ports: 
            - name: http
              containerPort: 5545 
          volumeMounts:
            - name: cms-contents
              mountPath: /www/Incheon/BACKEND/contents_root
      volumes:
        - name: cms-contents
          persistentVolumeClaim:
            claimName: cms-pvc
