actual-manifests/elasticsearch-manifest.yaml
# =================================================================
# Elasticsearch ClusterIP Service
# Kibana 등 다른 서비스들이 Elasticsearch에 쉽게 접근할 수 있도록 고정된 내부 IP를 제공합니다.
# =================================================================
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service       # Headless Service의 이름. StatefulSet의 'serviceName'과 일치해야 합니다.
  namespace: croms
spec:
  type: ClusterIP
  selector:
    app: elasticsearch              # 'app: elasticsearch' 라벨이 붙은 Pod를 대상으로 합니다.
  ports:
    - name: http
      port: 9200
      targetPort: 9200

---
# =================================================================
# Elasticsearch ClusterIP Service
# Kibana 등 다른 서비스들이 Elasticsearch에 쉽게 접근할 수 있도록 고정된 내부 IP를 제공합니다.
# =================================================================
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-headless       # Headless Service의 이름. StatefulSet의 'serviceName'과 일치해야 합니다.
  namespace: croms
spec:
  type: ClusterIP
  selector:
    app: elasticsearch              # 'app: elasticsearch' 라벨이 붙은 Pod를 대상으로 합니다.
  ports:
    - name: transport
      port: 9300

---

# =================================================================
# Elasticsearch StatefulSet
# 상태 유지가 중요한 Elasticsearch를 배포하기 위해 사용합니다.
# =================================================================
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: croms
spec:
  serviceName: "elasticsearch-headless" # 위에서 정의한 Headless Service를 지정
  replicas: 3                           # Pod 복제본 수 (단일 노드 구성)
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      # 노드에 vm.max_map_count가 준비되어 있어야 함 (노드 레벨)
      securityContext:
        fsGroup: 1000                # ⬅️ PV 권한 문제 예방
      # ----------------- Init Container 설정 -----------------
      # 메인 컨테이너가 시작되기 전에 먼저 실행되어 사전 준비 작업을 수행합니다.
      containers:
      - name: elasticsearch-container
        image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: rest
          containerPort: 9200
          protocol: TCP
        - name: transport
          containerPort: 9300
          protocol: TCP
        # ----------------- 환경 변수 설정 -----------------
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
        - name: tz-seoul
          mountPath: /etc/localtime
      # ----------------- 볼륨 정의 -----------------
      volumes:
      - name: tz-seoul
        hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
  # =================================================================
  # PersistentVolumeClaim 템플릿
  # StatefulSet의 각 Pod에 대해 고유한 영구 볼륨을 동적으로 생성합니다.
  # =================================================================
  volumeClaimTemplates:
  - metadata:
      name: data                    # PVC의 이름 (예: data-elasticsearch-0)
    spec:
      accessModes: [ "ReadWriteOnce" ]  # ⬅️ RWO에서 RWX로 변경(ReadWriteOnce -> ReadWriteMany)
      storageClassName: "ceph-filesystem"    # ⬅️ local-path에서 nfs-client로 변경
      resources:
        requests:
          storage: 100Gi             # 20GB의 저장 공간 요청
